--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <script src="script.js"></script>
 </head>
 <body>
-  <h1>Module 4 Solution Starter</h1>
+  <h1>Module 4 Solution</h1>
+  <h2>Open chrome developer tools and view the console tab to see the output.</h2>
 </body>
 </html>
